--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
