--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -22,13 +22,11 @@ jobs:
       - name: Set Envs
         run: echo $CYPRESS > ./cypress.env.json
 
-      - name: Install
-        run: npm install
-
       - name: Cypress run        
         uses: cypress-io/github-action@v6
         with:
           start: npm start
+          wait-on: 'http://localhost:3000'
           record: true
           parallel: true 
         env:
