--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -3,43 +3,20 @@ name: Cypress Tests
 on:
   workflow_dispatch:
 
-env:
-  CYPRESS: ${{ secrets.CYPRESS }}
-
 jobs:
-  install:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Cypress install
-        uses: cypress-io/github-action@v6
-        with:
-          # Disable running of tests within install job
-          runTests: false
-
-      - name: Save build folder
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          if-no-files-found: error
-          path: build
-
   cypress-run:
-    runs-on: ubuntu-22.04
-    needs: install
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download the build folder
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: build
-
-      - name: Cypress run
+      - name: Cypress run        
         uses: cypress-io/github-action@v6
         with:
           record: true
