--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -3,6 +3,10 @@ name: Cypress Tests
 on:
   workflow_dispatch:
 
+env:
+  CYPRESS: ${{ secrets.CYPRESS }}
+  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -16,11 +20,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set Envs
+        run: echo $CYPRESS > ./cypress.env.json
+
       - name: Cypress run        
         uses: cypress-io/github-action@v6
         with:
           record: true
           parallel: true 
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_RECORD_KEY: $CYPRESS_RECORD_KEY
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
