--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -21,13 +21,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: log1
-        run: echo $CYPRESS - ${{ secrets.CYPRESS }}
+        run: echo ${{ secrets.CYPRESS }}
 
       - name: log2
-        run: echo $CYPRESS_RECORD_KEY - ${{ secrets.CYPRESS_RECORD_KEY }}
+        run: echo ${{ secrets.CYPRESS_RECORD_KEY }}
 
       - name: Set Envs
-        run: echo $CYPRESS > ./cypress.env.json
+        run: echo ${{ secrets.CYPRESS }} > ./cypress.env.json
 
       - name: Cypress run        
         uses: cypress-io/github-action@v6
@@ -35,5 +35,5 @@ jobs:
           record: true
           parallel: true 
         env:
-          CYPRESS_RECORD_KEY: $CYPRESS_RECORD_KEY
+          CYPRESS_RECORD_KEY:  ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
