--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -21,12 +21,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: log1
-        run: echo ${{ secrets.CYPRESS }}
-
-      - name: log2
-        run: echo ${{ secrets.CYPRESS_RECORD_KEY }}
-
       - name: Set Envs
         run: echo ${{ secrets.CYPRESS }} > ./cypress.env.json
 
@@ -36,5 +30,5 @@ jobs:
           record: true
           parallel: true 
         env:
-          CYPRESS_RECORD_KEY:  ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_RECORD_KEY: $CYPRESS_RECORD_KEY
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
