--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -30,5 +30,5 @@ jobs:
           record: true
           parallel: true 
         env:
-          CYPRESS_RECORD_KEY: $CYPRESS_RECORD_KEY
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
