--- a/.github/workflows/trigger-tests.yml
+++ b/.github/workflows/trigger-tests.yml
@@ -3,14 +3,30 @@ name: Cypress Tests
 on:
   push:
     branches:
-    - master
+      - master
 
 env:
   CYPRESS: ${{ secrets.CYPRESS }}
   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
 jobs:
+  print-cla-1:
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Set Envs
+        run: echo "CLA TE AMO"
+
+  print-cla-2:
+    needs: print-cla-1
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Set Envs
+        run: echo "CLA TE AMO mas nem tanto"
+      
   cypress-run:
+    needs: print-cla-2
     runs-on: ubuntu-latest
     environment: production
 
